support search by maintainers
